--- a/phase2/public/index.html
+++ b/phase2/public/index.html
@@ -37,6 +37,7 @@
   <navbar ng-hide="isNavBarHide()"></navbar>
     <div flex layout="row">
       <left-sidebar></left-sidebar>
+      <right-sidebar></right-sidebar>
 
       <md-content style="position:relative; overflow-x:hidden;" flex="100" id="main-content">
         <div ng-view> </div>
@@ -65,6 +66,7 @@
   <script src="./src/users/UserService.js"></script>
   <script src="./src/userProvider.js"></script>
   <script src="./src/leftSidebarDirective.js"></script>
+  <script src="./src/rightSidebarDirective.js"></script>
   <script src="./src/navBarDirective.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/sweetalert2/dist/sweetalert2.js"></script>
@@ -77,6 +79,7 @@
   <script src="src/search bar/controller/searchBarController.js"></script>
   <script src="src/search bar/directive/searchBarDirective.js"></script>
   <script src="src/groups/controller/groupController.js"></script>
+  <script src="src/inbox/controller/inboxController.js"></script>
   <script src="bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
   <script src="../node_modules/angular-messages/angular-messages.min.js"></script>
   <script src="./assets/ng-material.js"></script>
