--- a/phase2/public/src/leftSidebar.html
+++ b/phase2/public/src/leftSidebar.html
@@ -30,7 +30,7 @@
             </md-button>
         </md-list-item>
         <md-list-item layout="row">
-            <md-button ng-click="route('/inbox')" layout="row">
+            <md-button ng-click="toggleRightList()" layout="row">
                 <p class="fa fa-envelope fa-lg" flex="20"></p>
                 <p flex="80">Inbox</p>
             </md-button>
@@ -47,12 +47,12 @@
                 <p flex="80" data-toggle="modal" data-target='#'>Groups</p>
             </md-button>
         </md-list-item>
-        <md-list-item layout="row">
+        <!-- <md-list-item layout="row">
             <md-button ng-click="route('/settings')" layout="row">
                 <p class="fa fa-cog fa-lg" flex="20" data-toggle="modal" data-target='#'></p>
                 <p flex="80" data-toggle="modal" data-target='#'>Settings</p>
             </md-button>
-        </md-list-item>
+        </md-list-item> -->
         <md-list-item layout="row">
             <md-button ng-click="logOut()" layout="row">
                 <p class="fa fa-power-off fa-lg" flex="20"><img ng-src="" alt=""></p>
