--- a/phase2/public/index.html
+++ b/phase2/public/index.html
@@ -81,6 +81,7 @@
   <script src="src/groups/controller/groupController.js"></script>
   <script src="src/inbox/controller/inboxController.js"></script>
   <script src="services/studentService.js"></script>
+  <script src="services/directMessageService.js"></script>
   <script src="bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
   <script src="../node_modules/angular-messages/angular-messages.min.js"></script>
   <script src="./assets/ng-material.js"></script>
