--- a/phase2/public/src/rightSidebar.html
+++ b/phase2/public/src/rightSidebar.html
@@ -1,12 +1,12 @@
 
-<md-sidenav id="sidenav" ng-click="toggleRightList()" md-component-id="right" class="md-whiteframe-z2" >
+<md-sidenav ng-controller="InboxController as inbox" id="sidenav" ng-click="toggleRightList()" md-component-id="right" class="md-whiteframe-z2" >
     <md-list>
       <md-content style="height: 600px;" md-theme="altTheme">
 
         <section>
-          <md-subheader class="md-primary">Private Messages</md-subheader>
+          <md-subheader class="md-primary">Direct Messages</md-subheader>
           <md-list layout-padding>
-            <md-list-item class="md-3-line" ng-repeat="message in messages">
+            <md-list-item class="md-3-line" ng-repeat="message in inbox.messages">
                 <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
                 <div class="md-list-item-text">
                   <h3>{{message.what}}</h3>
