--- a/phase2/public/login.html
+++ b/phase2/public/login.html
@@ -1,6 +1,6 @@
 <div ng-controller="UserController" layout="column" ng-cloak class="contentdemoBasicUsage">
     <md-content flex="">
-        <md-toolbar class="md-info" layout="row">
+        <md-toolbar style="background-color:#2D5F99" class="md-info" layout="row">
             <div class="md-toolbar-tools">
               <h2 class="md-flex">#YoNoMeCuelgo</h2>
             </div>
