--- a/phase2/public/src/rightSidebar.html
+++ b/phase2/public/src/rightSidebar.html
@@ -1,5 +1,5 @@
 
-<md-sidenav ng-controller="InboxController as inbox" id="sidenav" ng-click="toggleRightList()" md-component-id="right" class="md-whiteframe-z2" >
+<md-sidenav id="sidenav" ng-click="toggleRightList()" md-component-id="right" class="md-whiteframe-z2" >
     <md-list>
       <md-content style="height: 600px;" md-theme="altTheme">
 
