request services added

--- a/phase2/public/index.html
+++ b/phase2/public/index.html
@@ -80,8 +80,11 @@
   <script src="src/search bar/directive/searchBarDirective.js"></script>
   <script src="src/groups/controller/groupController.js"></script>
   <script src="src/inbox/controller/inboxController.js"></script>
+  <script src="src/home/controller/home_pageController.js"></script>
   <script src="services/studentService.js"></script>
   <script src="services/directMessageService.js"></script>
+  <script src="services/countdownService.js"></script>
+  <script src="services/settingsService.js"></script>
   <script src="bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
   <script src="../node_modules/angular-messages/angular-messages.min.js"></script>
   <script src="./assets/ng-material.js"></script>
