--- a/phase2/public/src/leftSidebar.html
+++ b/phase2/public/src/leftSidebar.html
@@ -1,7 +1,7 @@
 
 <md-sidenav ng-show="isUserVerified()" id="sidenav" ng-click="user.toggleList()" md-component-id="left" class="md-whiteframe-z2" >
     <md-list>
-        <md-card ng-controller="SettingsController" style="margin:0px; margin-bottom:4%; background-image:url('https://cdn-images-2.medium.com/max/1920/1*zH86wd-3URNeM_MoeaBQuQ.jpeg');" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
+        <md-card style="margin:0px; margin-bottom:4%; background-image:url('https://cdn-images-2.medium.com/max/1920/1*zH86wd-3URNeM_MoeaBQuQ.jpeg');" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch>
             <md-card-title>
                 <md-card-title-media flex="40">
                     <md-list-item class="md-media-sm card-media">
