index from nelson

--- a/phase2/public/index.html
+++ b/phase2/public/index.html
@@ -81,7 +81,9 @@
   <script src="src/groups/controller/groupController.js"></script>
   <script src="src/inbox/controller/inboxController.js"></script>
   <script src="src/home/controller/home_pageController.js"></script>
-  <script src="services/studentService.js"></script>
+  <script src = "../services/studentService.js"></script>
+  <script src = "../services/tutorsService.js"></script>
+  <script src = "../services/accountsService.js"></script>
   <script src="bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
   <script src="../node_modules/angular-messages/angular-messages.min.js"></script>
   <script src="./assets/ng-material.js"></script>
