--- a/phase2/public/src/leftSidebar.html
+++ b/phase2/public/src/leftSidebar.html
@@ -29,7 +29,7 @@
                 <p flex="80" data-toggle="modal">Home</p>
             </md-button>
         </md-list-item>
-        <md-list-item layout="row">
+        <md-list-item ng-if="userRole!='tutors'" layout="row">
             <md-button ng-click="toggleRightList()" layout="row">
                 <p class="fa fa-envelope fa-lg" flex="20"></p>
                 <p flex="80">Inbox</p>
