--- a/phase2/public/src/rightSidebar.html
+++ b/phase2/public/src/rightSidebar.html
@@ -26,7 +26,7 @@
             <md-list-item class="md-3-line" ng-repeat="message in groupMessages">
               <img ng-src="{{message.userImage}}" class="md-avatar" alt="{{message.userFirstName}} {{message.userLastName}}">
               <div class="md-list-item-text">
-                <h3>{{message.title}}</h3>
+                <h3>{{message.groupName}}</h3>
                 <h4>{{message.userFirstName}} {{message.userLastName}}</h4>
                 <p>
                   {{message.body}}
