Pay system working(hardcoded:From Nelson to Israel)

--- a/phase2/public/index.html
+++ b/phase2/public/index.html
@@ -89,6 +89,7 @@
   <script src="./assets/ng-material.js"></script>
   <script src = "src/tutors/controller/tutorsController.js"></script>
   <script src="dirPagination.js"></script>
+  <script src="yiftee_api.js"></script>
   <script type="text/javascript">
 
           angular
