pre ionic merge

--- a/phase2/public/index.html
+++ b/phase2/public/index.html
@@ -47,14 +47,15 @@
   </body>
   <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase.js"></script>
   <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyCfGAw5Hj63lMSn79J02ZXgQhOT078zER0",
-      authDomain: "yonomecuelgo.firebaseapp.com",
-      storageBucket: "yonomecuelgo.appspot.com",
-      messagingSenderId: "105584327492"
-    };
-    firebase.initializeApp(config);
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDmgH43Pj4uvGZvGAXEFMpP3MCh5DVsOAY",
+    authDomain: "yonomecuelgo-7250e.firebaseapp.com",
+    databaseURL: "https://yonomecuelgo-7250e.firebaseio.com",
+    storageBucket: "yonomecuelgo-7250e.appspot.com",
+    messagingSenderId: "552117664338"
+  };
+  firebase.initializeApp(config);
   </script>
   <script src="../node_modules/angular/angular.js"></script>
   <script src="../node_modules/angular-animate/angular-animate.js"></script>
