--- a/phase2/public/login.html
+++ b/phase2/public/login.html
@@ -98,6 +98,7 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="src/login/loginController.js"></script>
+    <script src="bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
 
 </body>
 </html>
